--- a/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
+++ b/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
@@ -1276,7 +1276,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Three of the new features appear using scientific notation. This is because they all incorporate Volume which is a relatively large number. The first value for Daily Returns is NaN because the value from the previous day is necessary to calculate it. The other interactions involving Daily Returns similarly have NaN as the first value. These NaNs need to be removed for processing and modelling with scikit-learn. The Pandas __df.dropna()__ function can be used for this purpose. All the generated features are float64 so these should feed into models without a problem."
+    "Three of the new features appear using scientific notation. This is because they all incorporate Volume which is a relatively large number. \n",
+    "\n",
+    "The first value for Daily Returns is NaN because the value from the previous day is necessary to calculate it. The other interactions involving Daily Returns similarly have NaN as the first value. These NaNs need to be removed for processing and modelling with Scikit-Learn. The Pandas __df.dropna()__ function can be used for this purpose. All the generated features are float64 so these should feed into models without a problem.\n",
+    "\n",
+    "**Note**:\n",
+    "The features with Adj Close suffer from data leakage and should not be used in practice. They remain for illustration purposes."
    ]
   },
   {
@@ -1657,13 +1662,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The histograms for all the features can be conveniently plotted using Matplotlib via Pandas with __df.hist()__. Each histogram is plotted on a separate subplot. These show the distribution of the data for each feature. That frequency of each value in the dataset is summarised with the value on the x-axis and the number of occurrences on the y-axis. The Open, High, Low and Adj Close seem to have very similar shapes with Close following closely behind and are thus likely to be highly correlated.\n",
+    "The histograms for all the features can be conveniently plotted using Matplotlib via Pandas with __df.hist()__. Each histogram is plotted on a separate subplot. These show the distribution of the data for each feature. That **frequency** of each value in the dataset is summarised with the value on the x-axis and the number of occurrences on the y-axis. The Open, High, Low and Adj Close seem to have very similar shapes with Close following closely behind and are thus likely to be highly correlated.\n",
     "\n",
     "The histogram for Daily Returns shows a normal distribution with 0 mean. This is a characteristic feature of daily returns. Daily Returns dominates the histogram shapes for the interactions where it is included. Volume is positively skewed and its shape dominates in the other models in which it is involved.\n",
     "\n",
-    "These two observations suggest that __feature scaling__ may be useful for relevant models where features and interactions incorporating Volume and Daily Returns are involved.\n",
-    "\n",
-    "<span style=\"color:hotpink\"> talk about the __kurtosis/tails__ of the distribution </span>"
+    "These two observations suggest that __feature scaling__ may be useful for relevant models where features and interactions incorporating Volume and Daily Returns are involved."
    ]
   },
   {
@@ -2465,6 +2468,13 @@
    ],
    "source": [
     "data_frames['GOOGL'].hist(bins=200, figsize=(9,9));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scaling the Features "
    ]
   },
   {
@@ -5692,9 +5702,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scatter matricies are another Pandas visualisation built on Matplotlib. These are really helpful in exploring both the distribution and correlations of the different features. They also show if different feature combinations may be redundant and unhelpful in modelling. Only half of the diagram is really needed as the plots across the diagonal with the histograms are essentially showing the same information rotated at 90 degrees counterclockwise and mirrored in a vertical plane. \n",
+    "Scatter matricies are another Pandas visualisation built on Matplotlib. These are really helpful in exploring both the **distribution** and **correlations** of the different features. They also show if different feature combinations may be **redundant** and unhelpful in modelling. Only half of the diagram is really needed as the plots across the diagonal with the histograms are essentially showing the same information rotated at 90 degrees counterclockwise and mirrored in a vertical plane. \n",
     "\n",
-    "A line plot a 45 degree diagonal indicates a correlation of 1. Open, High, Low, Close and Adj Close were all of this general shape and hence the first four of these were removed from consideration when modelling. The diagonal can be seen in the scatter matrix which includes Open and Close for illustration. The two distinct lines for Adj Close and Close are likely because of a 7-for-1 stock split. The similarity between the scatter plots for Open, Close, and Adj Close are clear. This is further reinforced by the heat map below."
+    "**A line plot a 45 degree diagonal indicates a correlation of 1.** Open, High, Low, Close and Adj Close were all of this general shape and hence the first four of these were removed from consideration when modelling. The diagonal can be seen in the scatter matrix which includes Open and Close for illustration. The two distinct lines for Adj Close and Close are likely because of a **7-for-1 stock split**. The similarity between the scatter plots for Open, Close, and Adj Close are clear. This is further reinforced by the **heat map** below."
    ]
   },
   {
@@ -9168,45 +9178,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### x PCA to visualise the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# # NANs make this not work too\n",
-    "# def pca(df):\n",
-    "#     from sklearn.decomposition import PCA\n",
-    "#     X = df[['Daily Returns', 'Volume', 'Open']].dropna()\n",
-    "#     pca = PCA(n_components=2)\n",
-    "#     X_r = pca.fit(X).transform(X)\n",
-    "#     print(X_r)\n",
-    "    \n",
-    "#     colors = ['navy', 'turquoise', 'darkorange']\n",
-    "#     lw = 2\n",
-    "\n",
-    "#     for color, i in zip(colors, [0, 1]):\n",
-    "#         plt.scatter(X_r[y == i, 0], X_r[y == i, 1], color=color, alpha=.8, lw=lw)\n",
-    "#     plt.legend(loc='best', shadow=False, scatterpoints=1)\n",
-    "#     plt.title('PCA of IRIS dataset')\n",
-    "\n",
-    "#     plt.figure()\n",
-    "#     plt.scatter(X_r[0], X_r[1])\n",
-    "#     plt.show()\n",
-    "    \n",
-    "#     # adj close on the y axis\n",
-    "# pca(data_frames['GOOGL'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Exploring individual features across stocks"
    ]
   },
@@ -11254,14 +11225,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Overview of the Charts\n",
-    "IPOs, general comparison"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Adjusting for Stock Splits\n",
     "It is evident from these charts which companies have had stock splits since trading publicly and which have not. Those very steep and sudden drops in the closing prices which meet the adjusted closing prices are instances of splits. AAPL, NFLX and GOOGL all show this phenomenon. \n",
     "\n",
@@ -11391,14 +11354,14 @@
     "Amazon is excluded from the discussion here because the data available on the date it was acquired was different from the data for the other stocks. The closing prices were adjusted for splits and so cannot be compared to the other stocks which were not adjusted for splits. \n",
     "\n",
     "<br/>\n",
-    "![](images/AMZN_stock_split.png)\n",
+    "![](http://gdurl.com/6Fkk)\n",
     "<center>\n",
     "https://finance.yahoo.com/quote/AMZN/history?period1=916372800&period2=936417600&interval=1d&filter=history&frequency=1d</center>\n",
     "\n",
     "<br/>\n",
     "This is clear when comparing the present data (Aug 5, 2017) for GOOGL before the 2-for-1 stock split to the data in the table above with the old data and the split ratio.\n",
     "\n",
-    "![](images/GOOGL_stock_split.png)\n",
+    "![](http://gdurl.com/BUYr)\n",
     "\n",
     "<center>\n",
     "https://finance.yahoo.com/quote/GOOGL/history?period1=1395892800&period2=1407124800&interval=1d&filter=history&frequency=1d\n",
@@ -21121,9 +21084,9 @@
     "collapsed": true
    },
    "source": [
-    "In this study the Python ecosystem for data science (Python, Pandas, NumPy, Matplotlib, and scikit-learn) was explored. This wad done specifically for use in stock price prediction (regression) and generating buy and sell signals (classification). Various models were considered and the performance of the polynomial regression model turned out to be the best overall in this case. This was not expected as it was thought that the random forests and neural networks would perform better considering their performance in research.\n",
+    "In this study the Python ecosystem for data science (Python, Pandas, NumPy, Matplotlib, and Scikit-Learn) was explored. This was done specifically for use in stock price prediction (Regression) and generating buy and sell signals (Classification). Various models were considered and the performance of the **Polynomial Regression model** turned out to be the best overall in this case. This was not expected as it was thought that the Random Forests and Neural Networks would perform better considering their performance in research.\n",
     "\n",
-    "**Future Work**\n",
+    "**Future Work**<br/>\n",
     "There are improvements that can be made to these experiments. Additional features can be added to the models. This often improves performance once the right tuning is done. Running the models on a more powerful cloud server will likely improve the disappointing performance for SVMs and Neural Nets. These shall be left for future exploration as this study was already quite exhaustive."
    ]
   },
@@ -21146,7 +21109,8 @@
     "- Yahoo and Google Finance\n",
     "- Quandl.com\n",
     "- CFA and CSC curricula\n",
-    "\n",
+    "- Portilla Algo Trading Course\n",
+    " \n",
     "### Python Ecosystem\n",
     "- University Of Michigan Coursera Courses on Data Analysis in Python\n",
     "- ML Coursera Course\n",
