--- a/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
+++ b/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
@@ -11228,7 +11228,7 @@
     "#### Adjusting for Stock Splits\n",
     "It is evident from these charts which companies have had stock splits since trading publicly and which have not. Those very steep and sudden drops in the closing prices which meet the adjusted closing prices are instances of splits. AAPL, NFLX and GOOGL all show this phenomenon. \n",
     "\n",
-    "For example, GOOGL had a 1998-for-1000 (averaged to 2-for-1) stock split on April 03, 2014 as a stock dividend. Up to the date of the data being examined, this is the only split they have ever had. To adjust the price for the split all the prices prior to the split have to be divided by the split ratio, which here is 1988/1000 = 1.998. The table below confirms the split ratio by dividing the closing price by the adjusted close price.\n",
+    "For example, GOOGL had a **1998-for-1000** (averaged to **2-for-1**) stock split on April 03, 2014 as a stock dividend. Up to the date of the data being examined, this is the only split they have ever had. To adjust the price for the split all the prices prior to the split have to be divided by the split ratio, which here is 1988/1000 = 1.998. The table below confirms the split ratio by dividing the closing price by the adjusted close price.\n",
     "\n",
     "More on the stock split here: https://www.sec.gov/Archives/edgar/data/1288776/000128877614000065/goog10-qq22014.htm."
    ]
@@ -11340,7 +11340,7 @@
     "FB, which has not had a stock split up to the dates considered while publicly trading, shows no similar steep drops and the close and adjusted close lines appear to completely overlap.\n",
     "\n",
     "#### Adjusting for dividends\n",
-    "Reduce the stock price by the amount of the dividend on the ex-dividend date (when the security no longer trades with its declared dividend). These would not be such large amounts as a stock split and so would not be as obvious on the charts. As of this writing none of the FAANG stocks have had dividends except for AAPL. The price of the dividend tends to be very small and so is not as obvious as stock splits on the charts. The largest dividend so far for AAPL has been \\$3.29 which occurred on 5/8/2014 (see: http://www.nasdaq.com/symbol/aapl/dividend-history). This pales in comparison to the \\$566.98 difference seen in the table above for 2 April, 2014.\n",
+    "Reduce the stock price by the amount of the dividend on the **ex-dividend date** (when the security no longer trades with its declared dividend). These would not be such large amounts as a stock split and so would not be as obvious on the charts. As of this writing none of the FAANG stocks have had dividends except for AAPL. The price of the dividend tends to be very small and so is not as obvious as stock splits on the charts. The largest dividend so far for AAPL has been \\$3.29 which occurred on 5/8/2014 (see: http://www.nasdaq.com/symbol/aapl/dividend-history). This pales in comparison to the \\$566.98 difference seen in the table above for 2 April, 2014.\n",
     "\n",
     "#### Purpose of Using the Adjusted Close\n",
     "Using the adjusted close prices for predictions is important because the algorithm will mistakenly interpret the drop in prices with splits and dividends as a drop in the market value of the stocks. This can prompt the trading algorithm to act as though there is a major sell off in the stock. "
@@ -11377,21 +11377,7 @@
     "#### Volume\n",
     "The volume can also play a significant role in interpreting the price of the stocks. For example, looking at the corresponding volume for the day of a splt could reinforce that this is not really a sell off and just a split. however, this may not necessarily be the case, as the two events can theoretically occur simultaneously.\n",
     "\n",
-    "Comparing all the charts AAPL seems to have the highest volume traded over time. There are a few spikes in volume over time. **The highest one occurred on __date__ when a __---__ prompted a major sell off of the stock.**\n",
-    "\n",
-    "Volume and outliers.\n",
-    "- __SPY is lower because of consolidations?__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# box plot comparing volumes for all the stocks"
+    "Comparing all the charts AAPL seems to have the highest volume traded over time. There are a few spikes in volume over time. "
    ]
   },
   {
@@ -12504,7 +12490,7 @@
    ],
    "source": [
     "adj_close_df.plot()\n",
-    "plt.title(\"FANG Stock Prices ($US) for {0} - {1}\".format(adj_close_df.index[0].year, adj_close_df.index[-1].year))"
+    "plt.title(\"FAANG Stock Prices ($US) for {0} - {1}\".format(adj_close_df.index[0].year, adj_close_df.index[-1].year))"
    ]
   },
   {
@@ -13708,7 +13694,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Backfilling the missing data was tried to prepare the data for estimators and plotting. However, the significant expanse of the data that was filled in meant that certain algorithms took a severe performance hit. For instance FB had to be filled in from 1993 to 2012 when it had its IPO. Thats longer than it has actually been trading for. For smaller periods this may be more appropriate. This technique was thus replaced with dropping the rows with the missing data instead. The remaining rows were then fed to the estimators and led to much better performance."
+    "**Backfilling** the missing data was tried to prepare the data for estimators and plotting. However, the significant expanse of the data that was filled in meant that certain algorithms took a severe performance hit.\n",
+    "\n",
+    "For instance FB had to be filled in from 1993 to 2012 when it had its IPO. Thats longer than it has actually been trading for. For smaller periods this may be more appropriate. This technique was thus replaced with dropping the rows with the missing data instead. The remaining rows were then fed to the estimators and led to much better performance."
    ]
   },
   {
@@ -14696,26 +14684,6 @@
    },
    "outputs": [],
    "source": [
-    "# normalise the data - volume is very out of scale\n",
-    "# use feature scaling (unless using trees.)\n",
-    "\n",
-    "# random forests don't need scaling or preprocessing.\n",
-    "# extensive parameter tuning is also not needed.\n",
-    "# not good for text classification."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# this is not needed for the labels.\n",
-    "# there is also a min-max scaler\n",
-    "# not sure what the difference is\n",
-    "\n",
     "def scale_X(X):    \n",
     "    scaler = preprocessing.StandardScaler()\n",
     "    X = scaler.fittransform(X)"
@@ -14740,61 +14708,59 @@
    "metadata": {},
    "source": [
     "### Overview and Introduction to Machine Learning Concepts and Techniques\n",
-    "The general strategy used to determine the best model involves selecting several models then training them and comparing the results using some metric. The specifics vary depending on the model itself and the particulars involved. These will be described in more detail in the sections that follow.\n",
+    "The general strategy used to determine the best model involves selecting several models, then training them and comparing the results using some metric. The specifics vary depending on the model itself and the particulars involved. These will be described in more detail in the sections that follow.\n",
     "\n",
-    "- Functions checking which approach gives the best results.\n",
-    "- Use only one stock where the grid search was very slow, then try all of them\n",
-    "- go to the cloud otherwise?\n",
+    "#### Supervised and Unsupervised learning\n",
+    "In supervised learning, features and outputs/labels in the training data are known at the start and these are used to train the model. (In contrast, with unsupervised learning, there are no labels to learn from. This is used with such techniques as clustering to discover similarities between data points.). This is the type of learning used here. \n",
     "\n",
-    "- introduct supervised and unsupervised learning here.\n",
-    "In supervised learning, features and outputs/labels in the training data are known at the start and these are used to train the model. (In contrast, with unsupervised learning, there are no labels to learn from. This is used with such techniques as clustering to discover similarities between data points.) \n",
+    "#### The objective function\n",
+    "The objective function (also called the  **cost** or **loss** function) is used to choose the best parameters $\\theta_0 ... \\theta_n$ for the hypothesis function such that the error of the difference between the actual label values and the prediction values produced by using particular parameters is minimised. **Techniques used to minimise objective functions include stochastic gradient descent, mini-batch gradient descent, adagrad etc.**\n",
     "\n",
-    "- talk about the objective function too\n",
-    "The objective function (also called the  cost or loss function) is used to choose the best parameters $\\theta_0 ... \\theta_n$ for the hypothesis function such that the error of the difference between the actual label values and the prediction values produced by using particular parameters is minimised. **Techniques used to minimise objective functions include stochastic gradient descent, mini-batch gradient descent, adagrad etc./**\n",
-    "\n",
-    "After the model is trained, its generalisation to unseen data is measured with the test set. Metrics **like precision, recall, accuracy** can be used to measure its performance **against some benchmark??**. Finally the model can be used for predicting on new real-world data. \n",
-    "\n",
-    "- bias and variance"
+    "After the model is trained, its generalisation to unseen data is measured with the test set. Metrics **like precision, recall, accuracy** can be used to measure its performance **against some benchmark??**. Finally the model can be used for predicting on new real-world data. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modelling with scikit-learn\n",
-    "Most of the models in scikit-learn come with both regression and classification counterparts. Thus, you have Random Forest Regressors and Random Forest Classifiers. Similarly there are Support Vector Regressors and Support Vector Classifiers.\n",
+    "### Modelling with Scikit-Learn\n",
+    "Most of the models in Scikit-Learn come with both Regression and Classification counterparts. Thus, you have Random Forest Regressors and Random Forest Classifiers. Similarly there are Support Vector Regressors and Support Vector Classifiers.\n",
     "\n",
-    "Modelling in scikit-learn follows a series of 4 basic steps no matter which model is used. They are: \n",
+    "Modelling in Scikit-Learn follows a series of 4 basic steps no matter which model is used. They are: \n",
     "1. Import the model\n",
     "2. Instantiate the model\n",
     "3. Fit the model\n",
     "4. Perform predictions\n",
     "\n",
-    "Much additional complexity can be added to this basic framework as scikit-learn comes with a variety of tools to facilitate the full machine learning pipeline. Modules exist for creating train/test splits and performing cross-validation. __etc__ More information on these follows:\n",
+    "Much additional complexity can be added to this basic framework as Scikit-Learn comes with a variety of tools to facilitate the full machine learning pipeline. Modules exist for creating train/test splits, performing cross-validation in multiple ways, persisting models and adding pipelines. \n",
     "\n",
-    "**Train/Test Split and Cross Validation**<br/>\n",
+    "**Train/Test Split**\n",
     "\n",
-    "Training on all the data leads to overfitting and over-optimistic scoring. Train/test splits are an improvement over the prior method. The data is split into about 60% for training and 40% for testing and the model is trained only on the training set, then it is tested using unseen data from the test set. The problem with this approach is that it produces different metrics depending on the samples that are randomly drawn for training. \n",
+    "Training on all the data leads to **overfitting** and **over-optimistic scoring**. Train/test splits are an improvement over the prior method. The data is split into about 60% for training and 40% for testing and the model is trained only on the training set. Then, it is tested using unseen data from the test set. The problem with this approach is that it produces different metrics depending on the samples that are randomly drawn for training. \n",
     "\n",
-    "Cross validation ammends this problem by taking the average of the metrics from different train/test splits. It can thus produce more reliable results on predictions. Cross validation splits the data set into folds and uses each fold as the test set and the other sets as the training set for the number of folds in the data set. So, if there are 10 folds, the data will be split into 10 folds where the first 9 are for training and the last 1 is for testing. Then on the second pass, the second to last fold will be used for testing and the rest for training. This process is repeated until all 10 folds are used for testing. To choose the best performing model do cross validation on each model and choose the one that performs the best.\n",
+    "** Cross Validation**<br/>\n",
+    "\n",
+    "Cross validation ammends this problem by taking the average of the metrics from different train/test splits. It can thus produce more reliable results on predictions. Cross validation splits the data set into **folds** and uses each fold as the test set and the other sets as the training set for the number of folds in the data set. \n",
+    "\n",
+    "So, if there are 10 folds, the data will be split into 10 folds where the first 9 are for training and the last 1 is for testing. Then on the second pass, the second to last fold will be used for testing and the rest for training. This process is repeated until all 10 folds are used for testing. To choose the best performing model do cross validation on each model and choose the one that performs the best.\n",
     "\n",
     "**GridSearchCV and RandomGridSearchCV**<br/>\n",
     "\n",
-    "To take it up a notch grid search cross validation and randomised grid search cross validation can be used. These are both great for fine tuning parameters because they automatically sort through different parameters and prevent the need to do this manually. Then they return the best performing model which can be used for training and predictions! Grid search CV takes a finite set of specific parameters to search over. Randomised grid search CV can sort through a range of parameters from which it randomly chooses and then returns the best model. It is better for use when there are a wider range of parameters to search over which would be impractical to do exhaustively with grid search CV. One caveat is that these can both be a bit slow depending on how many cross-validation folds there are and how many parameters are being searched over. Higher numbers for both mean a longer search time.\n",
+    "To take it up a notch, grid search cross validation and randomised grid search cross validation can be used. These are both great for fine tuning parameters because they automatically sort through different parameters and prevent the need to do this manually. Then they return the best performing model which can be used for training and predictions! \n",
     "\n",
-    "- gridsearch good for more control over the parameters and if less processing power is required\n",
-    "- randomgridsearch is good when theere is more processing power (esp for the more complex models) and less control over parameters is desired.\n",
+    "Grid search CV takes a finite set of specific parameters to search over. Randomised grid search CV can sort through a range of parameters from which it randomly chooses and then returns the best model. It is better for use when there is a wider range of parameters to search over which would be impractical to do exhaustively with grid search CV. \n",
+    "\n",
+    "Research has shown that where the choice exists, **Random Grid Searches provide better results in less passes than Grid Search**.\n",
+    "\n",
+    "One caveat is that these can both be a bit slow depending on how many cross-validation folds there are and how many parameters are being searched over. Higher numbers for both mean a longer search time.\n",
     "\n",
     "**Model Persistence**<br/>\n",
     "\n",
-    "Additionally, scikit-learn has built in support for pickling and model persistence. This is very useful when a model takes a long time to train. Persistence can be used to save the trained model. It can then be reloaded and predictions can be done directly on that trained model.\n",
+    "Additionally, Scikit-Learn has built in support for **pickling** and model persistence. This is very useful when a model takes a long time to train. Persistence can be used to save the trained model. It can then be reloaded and predictions can be done directly on that trained model.\n",
     "\n",
-    "- pipelines and gridsearchcv?\n",
-    "(I can't remember.)\n",
+    "**Pipelines**<br/>\n",
     "\n",
-    "These techniques will be demonstrated in more detail below.\n",
-    "\n",
-    "- metrics, preprocessing, scaling, transforms."
+    "These are great for preprocessing steps like feature scaling and feature selection. When used with Grid searched the parameters for these can also be searched through."
    ]
   },
   {
