--- a/data-structures-and-algorithms/sorting/Bubble Sort.ipynb
+++ b/data-structures-and-algorithms/sorting/Bubble Sort.ipynb
@@ -2,72 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def bubble_sort(arr):\n",
-    "    \n",
-    "    \n",
+    "def bubble_sort(arr): \n",
     "    \n",
     "    for i in range(0, len(arr)-1):\n",
     "        \n",
     "        done = True\n",
     "        \n",
     "        for j in range(0, len(arr)-1):\n",
-    "            print(arr)\n",
+    "            #print(arr)\n",
     "            if arr[j] > arr[j+1]:\n",
     "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
     "                done = False\n",
     "        \n",
-    "        if done: return\n",
-    "                \n",
-    "    \n",
-    "    return arr"
+    "        if done: \n",
+    "            return arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 3, 5, 12, 9, 20]\n",
-      "[3, 10, 5, 12, 9, 20]\n",
-      "[3, 5, 10, 12, 9, 20]\n",
-      "[3, 5, 10, 12, 9, 20]\n",
-      "[3, 5, 10, 9, 12, 20]\n",
-      "[3, 5, 10, 9, 12, 20]\n",
-      "[3, 5, 10, 9, 12, 20]\n",
-      "[3, 5, 10, 9, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n",
-      "[3, 5, 9, 10, 12, 20]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[3, 5, 9, 10, 12, 20]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = [10, 3, 5, 12, 9, 20]\n",
     "bubble_sort(arr)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
