--- a/data-structures-and-algorithms/recursion/Number of Paths in a Grid.ipynb
+++ b/data-structures-and-algorithms/recursion/Number of Paths in a Grid.ipynb
@@ -95,15 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 41 µs, sys: 1 µs, total: 42 µs\n",
-      "Wall time: 50.8 µs\n"
+      "CPU times: user 44 µs, sys: 1e+03 ns, total: 45 µs\n",
+      "Wall time: 52.9 µs\n"
      ]
     },
     {
@@ -112,7 +112,7 @@
        "2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 197 µs, sys: 16 µs, total: 213 µs\n",
-      "Wall time: 220 µs\n"
+      "CPU times: user 302 µs, sys: 1e+03 ns, total: 303 µs\n",
+      "Wall time: 315 µs\n"
      ]
     },
     {
@@ -140,7 +140,7 @@
        "30"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,17 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 435 µs, sys: 6 µs, total: 441 µs\n",
-      "Wall time: 445 µs\n"
+      "CPU times: user 446 µs, sys: 7 µs, total: 453 µs\n",
+      "Wall time: 459 µs\n"
      ]
     },
     {
@@ -170,13 +170,141 @@
        "27"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%time number_of_paths(matrix3, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Memoised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def number_of_paths_memo(matrix, row, col):\n",
+    "    \n",
+    "    # memo table\n",
+    "    paths = [[None]*len(matrix[0]) for _ in range(len(matrix))]    \n",
+    "    \n",
+    "    return number_of_paths_memo_rec(matrix, row, col, paths)\n",
+    "    \n",
+    "    \n",
+    "def number_of_paths_memo_rec(matrix, row, col, paths):\n",
+    "    \n",
+    "    if row<len(matrix) and col < len(matrix[0]):\n",
+    "    \n",
+    "        # base case\n",
+    "        if row == len(matrix)-1 and col == len(matrix[0])-1: \n",
+    "            return 1 \n",
+    "        elif matrix[row][col] == 1: \n",
+    "            return 0\n",
+    "        else:\n",
+    "            if paths[row][col] == None:\n",
+    "                paths[row][col] = ( number_of_paths_memo_rec(matrix, row+1, col, paths) \n",
+    "                                    + number_of_paths_memo_rec(matrix, row, col+1, paths))\n",
+    "                return paths[row][col]\n",
+    "            else: \n",
+    "                return paths[row][col]\n",
+    "        return 0\n",
+    "    else: \n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 58 µs, sys: 2 µs, total: 60 µs\n",
+      "Wall time: 68.2 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time number_of_paths_memo(matrix1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 120 µs, sys: 25 µs, total: 145 µs\n",
+      "Wall time: 125 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time number_of_paths_memo(matrix2, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 233 µs, sys: 2 µs, total: 235 µs\n",
+      "Wall time: 244 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time number_of_paths_memo(matrix3, 0, 0)"
    ]
   }
  ],
