--- a/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
+++ b/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
@@ -20977,28 +20977,15 @@
     "collapsed": true
    },
    "source": [
-    "### Finance\n",
-    "- Annual Reports for GOOGL EDGAR etc \n",
-    "- Investopedia\n",
-    "- Yahoo and Google Finance\n",
-    "- Quandl.com\n",
-    "- CFA and CSC curricula\n",
-    "- Portilla Algo Trading Course\n",
-    " \n",
-    "### Python Ecosystem\n",
-    "- University Of Michigan Coursera Courses on Data Analysis in Python\n",
-    "- ML Coursera Course\n",
-    "- Scikit-learn, Pandas, Numpy, Python documentation\n",
-    "- DataSchool\n",
-    "- Advanced scikit-learn (YouTube)\n",
+    "1. Balch, Tucker, et al. Machine Learning for Trading. Udacity, [https://www.udacity.com/course/machine-learning-for-trading--ud501](https://www.udacity.com/course/machine-learning-for-trading--ud501).\n",
     "\n",
-    "### Books\n",
-    "- An Introduction to Statistical Learning with Applications in R. Hastie, Tibshirani etc.\n",
-    "- Forecasting. Principles and Practice\n",
-    "- Hands-on Machine Learning with Scikit-learn and Tensorflow. Geron.\n",
+    "1. Géron, Aurélien. \"Hands-on Machine Learning with Scikit-Learn and Tensorflow.\" (2017).\n",
     "\n",
-    "### Research Papers\n",
-    "- Convolutional Neural Nets and ImageNet Competition"
+    "1. Hunter, John D. \"Matplotlib: A 2D graphics environment.\" Computing In Science & Engineering 9.3 (2007): 90-95.\n",
+    "\n",
+    "1. McKinney, Wes. \"Data structures for statistical computing in python.\" Proceedings of the 9th Python in Science Conference. Vol. 445. Austin, TX: SciPy, 2010.\n",
+    "\n",
+    "1. Pedregosa, Fabian, et al. \"Scikit-learn: Machine learning in Python.\" Journal of Machine Learning Research 12.Oct (2011): 2825-2830."
    ]
   }
  ],
